# no-log-tears

./: README.md  pyproject.toml
.github/: dependabot.yml
src/no_log_tears/: __init__.py  config.py  logger.py  mixin.py  record.py  settings.py
src/no_log_tears/formatter/: __init__.py  datetime.py  json.py  soft.py  traceback.py  utc.py
tests/integration/: conftest.py  test_example.py
tests/stub/: users.py
tests/unit/: test_settings.py
tests/unit/formatter/: conftest.py  test_datetime.py  test_json.py  test_soft.py  test_traceback.py  test_utc.py
