[tool.poetry]
name = "no-log-tears"
version = "0.2.1"
description = "NoLogTears is a simple extension of Python's built-in logging library, designed to make logging easier, more efficient, and headache-free—no more tears over log management."
authors = ["zerlok <danil.troshnev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "no_log_tears", from = "src"}]
keywords = [
    "python",
    "logging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/zerlok/no-log-tears"
Issues = "https://github.com/zerlok/no-log-tears/issues"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {version = "^2.10.6", optional = true}
pydantic-settings = {extras = ["yaml"], version = "^2.7.1", optional = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.extras]
all = ["pydantic", "pydantic-settings", "PyYAML"]

[tool.ruff]
target-version = "py39"
include = ["src/**/*.py", "tests/**/*.py"]
line-length = 120
output-format = "pylint"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # because we use mypy
    "A005", # waiting for ruff 0.10.0
    "D203", # incompatible with D211
    "D212", # incompatible with D213
    "FA", # TODO: consider should we use __annotations__
    "TD", # no task tracking
    "FIX", # TODO: consider enable it against new code on pull requests
    "COM812", # because ruff format suggests to skip it
    "ISC001", # because ruff format suggests to skip it
    "RET505", # clashes with mypy exhaustiveness check
    "S101", # allow asserts for tests checks and mypy help
    "UP007", # because of python 3.9 support
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001", # it's ok to use a fixture with a side effect in a test.
    "PT004", # fixture may add side effect and doesn't return anything.
    "D", # no need to document tests.
    "PLR0913", # pytest fixtures and test funcs may have a lot of parameters.
]


[tool.mypy]
files = ["src", "tests"]

# NOTE: it's hard to disallow any expr, any decorated, any explicit when working with logging library.
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false

strict = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
strict_optional = true
enable_error_code = [
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "explicit-override",
    "mutable-override",
    "unimported-reveal",
    "narrowed-type-not-subtype",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "if __name__ == .__main__.:",
    "if t.TYPE_CHECKING:",
]
show_missing = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
